--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     font-family: 'Montserrat', sans-serif;
@@ -126,4 +129,42 @@ p{
 
 .pricing-column{
     padding: 3% 2%;
+}
+
+/* CTA Section */
+
+#cta{
+    text-align: center;
+    background-color: #ff4c68;
+    color: #fff;
+    padding: 7% 15%;
+}
+
+.cta-heading{
+    font-weight: 700;
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+/* Footer section */
+
+#footer{
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.social-icon{
+    margin: 20px 10px;
+}
+
+
+@media (max-width: 1028px){
+    .title-img{
+        position: static;
+        transform: rotate(0deg);
+    }
+
+    #title{
+        text-align: center;
+    }
 }
