--- a/css/styles.css
+++ b/css/styles.css
@@ -1,170 +1,167 @@
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
-body{
-    font-family: 'Montserrat', sans-serif;
+body {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
 }
 
-#title{
-    background-color: #ff4c68;
-    color: #fff;
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 700;
 }
 
-h1 {
-    font-size: 3.5rem;
-    line-height: 1.5;
-    font-weight: 900;
+p {
+  color: #8f8f8f;
 }
 
-h2{
-    font-size: 3rem;
-    line-height: 1.5;
-    font-weight: 700;
+/* Headings */
+.big-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
 }
 
-h3{
-    /* font-family: 'Montserrat'; */
-    font-weight: 700;
-    font-size: 1.5rem;
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
-p{
-    color: #8f8f8f;
-}
-
-.container-fluid{
-    padding: 3% 15% 7%;
+/* Containers */
+.container-fluid {
+  padding: 7% 15%;
 }
 
 /* Navigation Bar*/
-.navbar-brand{
-    font-family: 'Ubuntu';
-    font-size: 2.5rem;
-    font-weight: 700;
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: 700;
 }
 
-.navbar{
-    padding: 0 0 4.5rem;
+.navbar {
+  padding: 0 0 4.5rem;
 }
 
-.nav-item{
-    padding: 0 18px;
+.nav-item {
+  padding: 0 18px;
 }
 
-.nav-link{
-    font-size: 1.2rem;
-    font-weight: 400;
+.nav-link {
+  font-size: 1.2rem;
+  font-weight: 400;
 }
 
 /* Buttons */
 
-.download-button{
-    margin: 5% 3% 5% 0%;
+.download-button {
+  margin: 5% 3% 5% 0%;
 }
 
 /* Title image */
-.title-img{
-    width: 60%;
-    transform: rotate(25deg);
-    position: absolute;
-    right: 30%;
+.title-img {
+  width: 60%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 30%;
+}
+
+/* Title section */
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  text-align: left;
+}
+
+#title .container-fluid {
+  padding: 3% 15% 7%;
 }
 
 /* Features */
 
-#features{
-    padding: 7% 15%;
-    background-color: #fff;
-    position: relative;
-}
-.icon{
-    color: #ef8172;
-    margin-bottom: 1rem;
+#features {
+  background-color: #fff;
+  position: relative;
 }
 
-.icon:hover{
-    color: #ff4c68;
+.feature-title {
+  font-size: 1.5rem;
 }
 
-.feature-headings{
-    text-align: center;
-    padding: 5%;
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
+
+.feature-headings {
+  padding: 5%;
 }
 
 /* Testimonials */
-#testimonials{
-    text-align: center;
-    background-color: #ef8172;
-    color: #fff;
+#testimonials {
+  background-color: #ef8172;
+  color: #fff;
 }
 
-.carousel-item{
-    padding: 7% 15%;
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
-.testimonial-image{
-    width: 10%;
-    border-radius: 100%;
-    padding: 20px;
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  padding: 20px;
 }
 
-#press{
-    background-color: #ef8172;
-    text-align: center;
-    padding-bottom: 3%;
+#press {
+  background-color: #ef8172;
+  padding-bottom: 3%;
 }
 
 .press-logo {
-    width: 15%;
-    margin: 20px 20px 50px;
+  width: 15%;
+  margin: 20px 20px 50px;
 }
 
-/* Princing */
+/* Pricing */
 
-#pricing{
-    padding: 100px;
-    text-align: center;
+#pricing {
+  padding: 100px;
 }
 
-.pricing-column{
-    padding: 3% 2%;
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.pricing-column {
+  padding: 3% 2%;
 }
 
 /* CTA Section */
 
-#cta{
-    text-align: center;
-    background-color: #ff4c68;
-    color: #fff;
-    padding: 7% 15%;
-}
-
-.cta-heading{
-    font-weight: 700;
-    font-size: 3.5rem;
-    line-height: 1.5;
+#cta {
+  background-color: #ff4c68;
+  color: #fff;
 }
 
 /* Footer section */
+.social-icon {
+  margin: 20px 10px;
+}
 
-#footer{
-    padding: 7% 15%;
+@media (max-width: 1028px) {
+  .title-img {
+    position: static;
+    transform: rotate(0deg);
+  }
+
+  #title {
     text-align: center;
-}
-
-.social-icon{
-    margin: 20px 10px;
-}
-
-
-@media (max-width: 1028px){
-    .title-img{
-        position: static;
-        transform: rotate(0deg);
-    }
-
-    #title{
-        text-align: center;
-    }
+  }
 }
